<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="library_text">Library</string>
    <string name="search_icon">Search</string>

    <string name="nav_header_img">A purple wavy background for the header</string>
    <string name="nav_header_txt">Filter By:</string>
    <string name="songs_text">Songs</string>
    <string name="artists_text">Artists</string>
    <string name="albums_text">Albums</string>

    <string name="now_playing_text">Now Playing</string>

    <string name="by_song">By Song</string>
    <string name="by_artist">By Artist</string>
    <string name="by_album">By Album</string>
    <string name="hint_text">Search Your Library</string>

    <string name="album_cover">The album cover for the song</string>
    <string name="zero_time">0:00</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="no_songs">No songs to shuffle!</string>

    <string name="close_now_playing">Click to stop playing the current song</string>
    <string name="skip_back">Click to go back to the beginning of the song or to go back to the previous song</string>
    <string name="play_pause">Click to play or pause the song</string>
    <string name="skip_forward">Click to go to the next song</string>
    <string name="repeat_button">Toggle on to repeat the song when it finishes</string>
    <string name="shuffle_button">Toggle on to shuffle through the songs</string>
</resources>
