<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_padding_margin"
        android:layout_marginRight="@dimen/medium_padding_margin"
        android:layout_marginTop="@dimen/medium_padding_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        tools:text="@string/search_icon" />

    <RadioGroup
        android:id="@+id/search_by_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_padding_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/search_by_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/by_song"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/search_by_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_artist"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/search_by_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/by_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </RadioGroup>

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_padding_margin"
        android:layout_marginLeft="@dimen/medium_padding_margin"
        android:layout_marginRight="@dimen/medium_padding_margin"
        android:background="@drawable/bubble_edit_text"
        android:hint="@string/hint_text"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="text"
        android:padding="@dimen/small_padding_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <!-- Add both a ListView and GridView to a ViewFlipper here so that they
     can be used interchangeably-->
    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <GridView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="@integer/column_count"
                android:stretchMode="columnWidth" />

        </LinearLayout>

    </ViewSwitcher>

</LinearLayout>