<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicplayer.activity.NowPlayingActivity">

    <ImageButton
        android:id="@+id/close_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/small_padding_margin"
        android:padding="@dimen/small_padding_margin"
        android:contentDescription="@string/close_now_playing"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:id="@+id/song_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close_player"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/song_image"
            android:layout_width="@dimen/album_art_playing"
            android:layout_height="@dimen/album_art_playing"
            android:layout_gravity="center"
            android:contentDescription="@string/album_cover"
            tools:src="@drawable/bonkers_art" />

        <TextView
            android:id="@+id/name_of_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/small_padding_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Bonkers (Radio Edit)" />

        <TextView
            android:id="@+id/song_artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="Dizze Rascal &amp; Armand Van Helden" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding_margin"
            android:layout_marginTop="@dimen/large_padding_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/song_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/medium_padding_margin"
                android:layout_marginStart="@dimen/medium_padding_margin"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/zero_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:progress="0" />

            <TextView
                android:id="@+id/song_max"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/medium_padding_margin"
                android:layout_marginRight="@dimen/medium_padding_margin"
                android:layout_weight="2"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                tools:text="4:23" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_padding_margin"
            android:layout_marginTop="@dimen/medium_padding_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/skip_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/skip_back"
                android:src="@drawable/ic_fast_rewind" />

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_padding_margin"
                android:layout_marginRight="@dimen/medium_padding_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play_pause"
                tools:src="@drawable/ic_pause_circle" />

            <ImageButton
                android:id="@+id/skip_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/skip_forward"
                android:src="@drawable/ic_fast_forward" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium_padding_margin"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/repeat_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/medium_padding_margin"
                android:layout_marginRight="@dimen/medium_padding_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/repeat_button"
                tools:src="@drawable/ic_repeat" />

            <ImageButton
                android:id="@+id/shuffle_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_padding_margin"
                android:layout_marginStart="@dimen/medium_padding_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/shuffle_button"
                tools:src="@drawable/ic_shuffle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
